# batch-tx

./: Cargo.toml  README.md  keypairs.csv  transfer_targets.csv
src/: main.rs  utils.rs
